# mesa

./: .gitignore
src/: meson.build
src/amd/common/: ac_binary.c  ac_llvm_build.c  ac_nir_to_llvm.c
src/amd/vulkan/: radv_descriptor_set.h  radv_nir_to_llvm.c  radv_pipeline.c  radv_pipeline_cache.c  radv_private.h  radv_shader.c
src/compiler/glsl/: builtin_functions.cpp  list.h  lower_int64.cpp  standalone.cpp
src/compiler/spirv/: main.c
src/gallium/auxiliary/gallivm/: lp_bld_misc.cpp
src/gallium/auxiliary/util/: u_dummy.c
src/gallium/drivers/radeon/: r600_pipe_common.h
src/gallium/drivers/radeonsi/: si_pipe.c  si_shader.c  si_shader_tgsi_mem.c  si_shader_tgsi_setup.c  si_state.h  si_state_shaders.c
src/mesa/state_tracker/: st_cb_program.c
src/offline/: meson.build  offline.cpp  offline_si.c  offline_si.h  offline_standalone.cpp  offline_standalone.h  xf86drm_fake.h
src/util/: macros.h
src/vulkan/util/: vk_util.h
